--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,8 +5,7 @@
   <title> {% if page.title %} {{ page.title }} {% endif %}</title>
   <link href="media/cv-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/cv-print.css" type="text/css" rel="stylesheet" media="print">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+  <script src="https://kit.fontawesome.com/6a852dd133.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="main">
