--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8 />
+  <link rel="icon" type="image/png" href="favicon.png">
   <title> {% if page.title %} {{ page.title }} {% endif %}</title>
   <link href="media/cv-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/cv-print.css" type="text/css" rel="stylesheet" media="print">
